20090403 ui/wii/{wiimouse.c,wiijoystick.c}: Wii: Added support for 2 controllers
	 (Marek).
20090404 ui/widget/menu.c,ui/wii/{wiimouse.c,wiijoystick.c}: Wii: Added nunchuck
	 support (Marek).
20090404 ui/wii/wiimouse.c: Wii: Swapped the functions of 1 and 2 Wii remote
	 buttons in the menu (Marek).
20090408 menu_data.dat,ui/wii/wiidisplay.c: Wii: Implemented scalers/filters
	 (Marek).
20090414 disk/fdd.c: fix warning.
20090415 Makefile.am,configure.in,disk/{beta.c,fdd.[ch],plusd.c},
         machines/specplus3.c,menu_data.pl,
         ui/gtk/{Makefile.am,options-header.pl,options.pl},
         ui/widget/{Makefile.am,options-header.pl,options.pl,widget.c},
         ui/win32/{Makefile.am,options-header.pl}: enumerate combo box options
         to eliminate duplicated strings (patch #2722074) (Gergely Szasz).
20090416 ui/widget/options.pl: have current option selected when entering a
         combo selection screen (more from patch #2722074) (Gergely Szasz).
20090416 disk/{beta.[ch],disk.[ch],fdd.[ch],plusd.[ch]},machines/specplus3.[ch],
         menu.[ch],menu_data.dat,settings.dat,ui.c,ui/gtk/confirm.c,
         ui/options.dat,ui/ui.h,ui/widget/widget.c: add support for flipping
         drive images in single sided drives and for automatically merging both
         both drive images where they are named with the text
         [Ss]ide[ _][abAB12] (patch #2726922) (Gergely Szasz).
20090504 ui/uijoystick.c: poll_joystick() should fire an input_event for each
         button (fixes bug #2784357) (Anonymous).
20090504 input.c,ui/svga/{svgaui.c,svgajoystick.c}: switch SVGA joystick code
         from the polling interface to the event interface (patch #2785333)
         (Anonymous).
20090509 settings.dat,settings.pl,ui/gtk/options.pl,ui/widget/options.pl:
         defend against segfaults when trying to deal with empty options XML
         elements (thanks, Anonymous from patch #2788548) (Fred).
20090518 ui/gtk/options.pl: add <string.h> for strcmp (Fred).