@@ -2597,8 +2597,9 @@ this problem, the
 .RI ` \-\-no\-aspect\-hint '
 option may help.
 .PP
-If you're using the SDL UI under X11, the window will automatically
-resize to be the correct size for the graphics filter selected.
+If you're using the SDL UI under X11 or GTK+, the window will
+automatically resize to be the correct size for the graphics filter
+selected.
 .\"
 .\"------------------------------------------------------------------
 .\"
@@ -2620,8 +2621,8 @@ resolution. To deal with this, Fuse treats these machines as having a
 `normal' display size which is twice the size of a normal Spectrum's
 screen, leading to a different set of filters being available for
 these machines. Note that any of the double or triple-sizing filters
-are available for Timex machines only when using the SDL user
-interface.
+are available for Timex machines only when using the SDL or GTK+ user
+interfaces.
 .PP
 The available filters, along with their short name used to select them
 from the command line, are:
